# review-my-resume

./: README.md  app.py  prompt.txt  pyproject.toml  sample_result.json  utils.py
prompts/: career-coach.txt
sample_data/: sample-result.json
