[project]
name = "review-my-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "docx2txt>=0.8",
    "openai>=1.65.5",
    "pdfplumber>=0.11.5",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.43.1",
]
